--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,13 @@
             </li>
         </ul>
     </nav>
-    <div id="mainContainer" class=" border-2 my-18 w-full md:w-auto mx-0 md:mx-18 flex justify-center md:justify-between items-center rounded-[10px] flex-col lg:flex-row">
-        <div class="transition-all duration-4000 hover:rotate-180 bg-[url('./Images/college.jpg')] bg-cover w-[70%] lg:w-[50%] mx-5 my-4 flex justify-center items-center flex-col h-[380px]">
+    <section id="mainContainer" class=" border-2 my-18 w-full md:w-auto mx-0 md:mx-18 flex justify-center md:justify-between items-center rounded-[10px] flex-col lg:flex-row">
+        <aside class="transition-all duration-4000 hover:rotate-180 bg-[url('./Images/college.jpg')] bg-cover w-[70%] lg:w-[50%] mx-5 my-4 flex justify-center items-center flex-col h-[380px]">
             <p class="text-orange-500 text-5xl mb-6 font-bold">Student</p>
             <p class="text-white text-5xl mb-6 font-bold">Registration</p>
             <p class="text-green-400 text-5xl mb-6 font-bold">System</p>
-        </div>
-        <div id="formDiv" class="w-[70%] lg:w-[50%] my-8 mx-5">
+        </aside>
+        <section id="formDiv" class="w-[70%] lg:w-[50%] my-8 mx-5">
             <form class="border-2 border-green-700 grid grid-cols-4 p-4 rounded-[10px] m-2 md:m-0">
                 <label for="name" class="col-span-4 lg:col-span-1 text-xl font-semibold lg:mt-6 lg:mb-6 tracking-tight">Student Name
                 </label>
@@ -50,8 +50,8 @@
                     class="text-white col-span-2 md:col-span-1  border-2 rounded-[6px] py-1 bg-green-500 mb-6 hover:bg-green-700 cursor-pointer"
                     type="submit" value="ADD" id="addRecord">  
             </form>
-        </div>
-    </div>
+        </section>
+    </section>
     <main class="border-2 my-24 mx-0 md:mx-18 rounded-[10px] flex justify-center items-center" id="display">
         <div class="overflow-x-auto w-full my-4 mx-1 max-h-[300px] overflow-y-hidden" id="tableContainer">
 
